Adicionando um paragrafo

--- a/index04.html
+++ b/index04.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Estudando Javascript.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ducimus animi, cupiditate illum rerum laborum exercitationem blanditiis adipisci asperiores provident quos ut repudiandae nobis error? Modi velit nulla sequi consequatur.</p>
+    
 </body>
 </html>
