Adiconando um  title

--- a/index04.html
+++ b/index04.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Estudando Javascript.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ducimus animi, cupiditate illum rerum laborum exercitationem blanditiis adipisci asperiores provident quos ut repudiandae nobis error? Modi velit nulla sequi consequatur.</p>
-    
+
+    <h2>Um title </h2>
+
 </body>
 </html>
