adicionando um botão

--- a/index04.html
+++ b/index04.html
@@ -15,5 +15,6 @@
     <div>Criando uma div.</div>
 
     <h3>Criando um titulo terceiro.</h3>
+    <button>This is botão,</button>
 </body>
 </html>
